tests/paczka1/fuzzy1/12452462.err
Error in line 6: A983 A29 59,6
Error in line 5: JkpIgt8 A844 32,4
Error in line 21: JkpIgt8 A284 14,28
Error in line 20: JkpIgt8 A983 10,1
Error in line 22: SSi9v A983 71,9
Error in line 24: JkpIgt8 A284 26,5
Error in line 23: 4t8R A29 262,5
Error in line 37: 4t8R A844 28,7
Error in line 34: SSi9v A29 36,9
